--- a/rcAdmin/ForwardingCountries/Index.cshtml
+++ b/rcAdmin/ForwardingCountries/Index.cshtml
@@ -13,7 +13,9 @@
     }
 
 
-    var qStr = "Select * from Forwarding_Countries order by Id_Forwarding_Country desc";
+    var qStr = "Select * from Forwarding_Countries t1 "+
+    "inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service inner join Forwarding_Zone t3 on t1.Id_Forwarding_Zone = t3.Id_Forwarding_Zone inner join Countries t4 on t1.Id_Country = t4.Id_Country "+
+    "order by Id_Forwarding_Country desc";
     var data = db.Query(qStr);    
     
     var grid = new WebGrid(source: data,
@@ -36,10 +38,11 @@
                 columns: grid.Columns(
                     grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
     <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-</a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                                                                   grid.Column("Comment", "Comment", style: "rcGB"),
+</a>),                    
+                        grid.Column("Comment", "Comment", style: "rcGB"),
+                        grid.Column("Country_name", "Country", style: "rcGB"),
+                        grid.Column("Forwarding_service_name", "Service name", style: "rcGB"),
+                        grid.Column("Forwarding_zone", "Forwarding zone", style: "rcGB"),                        
                                          @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
                     grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
     <img src="images/delete.gif" alt="Delete" class="rcGC" />
