--- a/rcAdmin/ForwardingInvoice/Index.cshtml
+++ b/rcAdmin/ForwardingInvoice/Index.cshtml
@@ -54,15 +54,15 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Invoice" title="Edit Page">
-                    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-                </a>),
+                    grid.Column(format: @<a href="~/rcAdmin/ForwardingInvoice/Edit?id=@item.Id_Forwarding_Invoice" title="Edit Page">
+    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
+</a>),
                                          grid.Column("Original_Invoice_Number", "Original Forwarding Invoice", style: "rcGB"),
                                                               grid.Column("Sending_Date", format: @<i>@item.Sending_Date</i>),
-                    grid.Column(format: @<a href="IndexForwardingInvoice.cshtml?id=@item.Id_Forwarding_Invoice" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-            <img src="images/delete.gif" alt="Delete" class="rcGC" />
-        </a>)
-                   )
-               )
+                    grid.Column(format: @<a href="~/rcAdmin/ForwardingInvoice/Index?id=@item.Id_Forwarding_Invoice" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+    <img src="images/delete.gif" alt="Delete" class="rcGC" />
+</a>)
+                    )
+                )
     </div>
 </fieldset>
