--- a/rcAdmin/ForwardingServices/Index.cshtml
+++ b/rcAdmin/ForwardingServices/Index.cshtml
@@ -26,7 +26,7 @@
     @RenderPage("../_Menu.cshtml")
 }
 <fieldset>
-    <legend>All Pages | <a href="~/rcAdmin/ForwardingServices/NewForwardingServices">Create Forwarding Service</a> </legend>
+    <legend>All Pages | <a href="~/rcAdmin/ForwardingServices/New">Create Forwarding Service</a> </legend>
     <div id="grid">
         @grid.GetHtml(
                 tableStyle: "rcGrid",
@@ -34,10 +34,9 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="EditForwardingServices" title="Edit Page" ><img
-                        src="../images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Service&pName=@item.Forwarding_Service_Name" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
+                    grid.Column(format: @<a href="~/rcAdmin/ForwardingServices/Edit?id=@item.Id_Forwarding_Service" title="Edit Page">
+    <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
+</a>),                    
                                          grid.Column("Forwarding_Service_Name", "Forwarding service name", style: "rcGB"),
                                          grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
                     grid.Column(format: @<a href="ForwardingServices.cshtml?id=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
