--- a/rcAdmin/ForwardingZone/Index.cshtml
+++ b/rcAdmin/ForwardingZone/Index.cshtml
@@ -13,7 +13,7 @@
     }
 
 
-    var qStr = "Select * from Forwarding_Zone order by Id_Forwarding_Zone desc";
+    var qStr = "Select * from Forwarding_Zone t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service order by Id_Forwarding_Zone desc";
     var data = db.Query(qStr);    
     
     var grid = new WebGrid(source: data,
@@ -41,10 +41,10 @@
                     columns: grid.Columns(
                         @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Forwarding_Zone" title="Widgets"><img
                             src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
-                                             grid.Column("Forwarding_Zone", "Forwarding_Zone", style: "rcGB"),
+                                             grid.Column("Forwarding_Zone", "Forwarding Zone", style: "rcGB"),
                                              grid.Column("Comments", "Comments", style: "rcGB"),
-                                             grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"), 
-                        grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Edit.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
+                                             grid.Column("Forwarding_Service_Name", "Forwarding Service Name", style: "rcGB"), 
+                        grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Edit?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
                             src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),                                        
                         grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Index?id=@item.Id_Forwarding_Zone" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
                             <img src="images/delete.gif" alt="Delete" class="rcGC" />
