--- a/rcAdmin/ForwardingZone/Index.cshtml
+++ b/rcAdmin/ForwardingZone/Index.cshtml
@@ -42,12 +42,12 @@
                         @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Forwarding_Zone" title="Widgets"><img
                             src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
                                              grid.Column("Forwarding_Zone", "Forwarding Zone", style: "rcGB"),
-                                             grid.Column("Comments", "Comments", style: "rcGB"),
                                              grid.Column("Forwarding_Service_Name", "Forwarding Service Name", style: "rcGB"), 
+                                             grid.Column("Comments", "Comments", style: "rcGB"),
                         grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Edit?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
-                            src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),                                        
+                            src="/rcAdmin/images/edit_page.gif" alt="Edit" class="rcGC" /></a>),                                        
                         grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Index?id=@item.Id_Forwarding_Zone" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-                            <img src="images/delete.gif" alt="Delete" class="rcGC" />
+                            <img src="/rcAdmin/images/delete.gif" alt="Delete" class="rcGC" />
                         </a>)
                       )
                   )
